# Computer_Networking

lab1/: Cargo.toml  docker-compose.yml
lab1/src/: data.rs  main.rs  product.rs  scraping.rs  validation.rs
lab2/: .dockerignore  .env  Cargo.toml  Dockerfile  block_chat.db  diesel.toml  docker-compose.yml  products.db
lab2/migrations/2024-11-01-114340_create_blocks_users_messages/: down.sql  up.sql
lab2/migrations/2024-12-12-185748_create_products/: up.sql
lab2/src/: db.rs  handlers.rs  main.rs  models.rs  schema.rs  seed.rs  tcp_server.rs  websocket.rs
lab2/src/controllers/: user_controller.rs
lab2/src/routes/: user_routes.rs
lab2/src/utils/: pagination.rs
lab3/: Cargo.toml
lab3/src/: main.rs  raft_node.rs  udp_comms.rs
