[package]
name = "lab2"
version = "0.2.7"
edition = "2021"

[dependencies]
actix-multipart = "0.7.2"
actix-web = "4.9.0"
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.0", features = ["sqlite", "r2d2", "returning_clauses_for_sqlite_3_35", "chrono"] }  # Added "r2d2"
dotenvy = "0.15"
env_logger = "0.11.5"
futures = "0.3.31"
jsonwebtoken = "9.3.0"
log = "0.4.22"
r2d2 = "0.8.10"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"

[[bin]]
name = "seed"
path = "src/seed.rs"
