[package]
name = "lab2"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-multipart = "0.7.2"
actix-rt = "2.10.0"
actix-web = "4.9.0"
diesel = { version = "2.2.6", features = ["sqlite", "chrono", "r2d2"] }
dotenvy = "0.15.7"
env_logger = "0.11.5"
futures = "0.3.31"
log = "0.4.22"
mime = "0.3.17"
r2d2 = "0.8.10"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.6"
uuid = "1.11.0"

[dependencies.rusqlite]
version = "0.30.0"
features = ["bundled"]
